--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
   "bin": {
     "qualys-cli": "./index.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["Qualys", "Qualys API", "Qualys Asset Management"],
+  "author": "Stephan Grobler",
   "license": "ISC",
   "dependencies": {
-    "@octokit/auth-basic": "^1.4.5",
-    "@octokit/rest": "^18.0.0",
     "axios": "^0.19.2",
     "chalk": "^4.1.0",
     "clear": "^0.1.0",
@@ -24,7 +22,6 @@
     "inquirer": "^7.2.0",
     "lodash": "^4.17.15",
     "minimist": "^1.2.5",
-    "simple-git": "^2.10.0",
     "touch": "^3.1.0",
     "winston": "^3.3.3"
   }
